--- a/css/screen.css
+++ b/css/screen.css
@@ -3396,7 +3396,7 @@ footer .l-footer .section__footer--right .btn--footer {
     bottom: 4.8rem;
   }
   .m-wrap.realisation .coverrelatif img {
-    max-width: 48%;
+    max-width: 44%;
   }
   .m-wrap.realisation .coverrelatif-ter {
     left: 26.5rem;
@@ -3405,6 +3405,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .m-wrap.realisation .coverrelatif2 > img {
     width: 103%;
+    margin-top: -4rem;
   }
   .m-wrap.realisation .coverimage2middle {
     bottom: 26.5rem;
@@ -3418,11 +3419,27 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .m-wrap.realisation .coverrelatif-second2left img {
     top: 3.1rem;
-    left: 1.8rem;
-    width: 78%;
+    left: 2.8rem;
+    width: 96%;
   }
   .m-wrap.realisation .backimage-second2left > img {
     top: 23rem;
+  }
+  .m-wrap.realisation .coverrelatif-ter img {
+    max-width: 87%;
+    bottom: -9rem;
+    /* left: -6rem; */
+    margin-left: 7rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2right > img {
+    width: 175%;
+    margin-left: -4.6rem;
+    margin-top: -1.2rem;
+  }
+  .m-wrap.realisation .coverrelatif-second3right img {
+    width: 71%;
+    margin-left: 3rem;
+    margin-bottom: 9.7rem;
   }
 }
 @media screen and (min-width: 2300px) {
@@ -3436,10 +3453,22 @@ footer .l-footer .section__footer--right .btn--footer {
     bottom: -26.7rem;
     width: 65%;
   }
+  .m-wrap.realisation .coverrelatif-second2right > img {
+    width: 184%;
+    margin-left: -6.6rem;
+    margin-top: -7.2rem;
+  }
   .m-wrap.realisation .coverrelatif-second2left img {
     top: 3.1rem;
     left: 4.8rem;
     width: 86%;
+  }
+  .m-wrap.realisation .coverimage3middle {
+    left: -0.6rem;
+    bottom: 38rem;
+  }
+  .m-wrap.realisation .backimage-second3right > img {
+    width: 108%;
   }
 }
 .m-wrap.realisation .section__realisation--page_rea {
@@ -4245,20 +4274,45 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-6 {
-    margin-top: 9rem;
+    margin-top: 13rem;
+    margin-bottom: 6rem;
+  }
+
+  .item-4 {
+    grid-column: 4/6;
+    margin-left: 4.5rem;
+    margin-top: 5.7rem;
   }
 
   .item-24 {
     padding-right: 1.3rem;
   }
 }
+/* PC  xxtlg  2300px */
 @media screen and (min-width: 2300px) {
+  .item-4 {
+    margin-top: 8.7rem;
+  }
+
+  .item-24 {
+    padding-right: 11.3rem;
+  }
+
+  .item-35 {
+    grid-column: 6/7;
+    grid-row: 2/5;
+    margin-top: 25rem;
+  }
+
   .item-6 {
     margin-top: 13rem;
   }
 
-  .item-24 {
-    padding-right: 7.3rem;
+  .item-37 {
+    grid-column: 4/6;
+    grid-row: 3/6;
+    margin-left: -1.3rem;
+    margin-top: -1rem;
   }
 }
 .section__test {
