--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -586,18 +586,39 @@
       width: 75%;
     }
     .item-6{
-      margin-top: 9rem;
+      margin-top: 13rem;
+      margin-bottom: 6rem;
+    }
+    .item-4{
+      grid-column: 4/6;
+    margin-left: 4.5rem;
+    margin-top: 5.7rem;
     }
     .item-24{
       padding-right: 1.3rem;
     }
   }
+  /* PC  xxtlg  2300px */
   @media screen and (min-width: break-point(xxtlg)){
+    .item-4 {
+      margin-top: 8.7rem;
+    }
+    .item-24{
+      padding-right: 11.3rem;
+    }
+    .item-35 {
+      grid-column: 6/7;
+      grid-row: 2/5;
+      margin-top: 25rem;
+    }
     .item-6 {
       margin-top: 13rem;
     }
-    .item-24{
-      padding-right: 7.3rem;
+    .item-37 {
+      grid-column: 4/6;
+      grid-row: 3/6;
+      margin-left: -1.3rem;
+      margin-top: -1rem;
     }
   }
 
