--- a/css/screen.css
+++ b/css/screen.css
@@ -2713,7 +2713,6 @@ footer .l-footer .section__footer--right .btn--footer {
 .m-wrap.realisation {
   width: 94%;
   margin: auto;
-  border: 1px solid green;
   /* version petit mobile xxxs 370px */
   /* version moyen mobile xxs 420px */
   /* version très petite tablette Surface Duo xx-s 530px */
@@ -2749,12 +2748,6 @@ footer .l-footer .section__footer--right .btn--footer {
 .m-wrap.realisation span {
   text-transform: capitalize;
   font-weight: 800;
-}
-.m-wrap.realisation .bordure {
-  border: 2px dotted darkorchid;
-}
-.m-wrap.realisation .grid-containerAmoi3 {
-  background-color: aliceblue;
 }
 .m-wrap.realisation .backimage {
   padding-left: 0.6rem;
@@ -2889,10 +2882,12 @@ footer .l-footer .section__footer--right .btn--footer {
     bottom: 21rem;
   }
   .m-wrap.realisation .coverimage-ter {
-    width: 28%;
-    left: 1.9rem;
-    bottom: 15rem;
     padding-left: 0.8rem;
+    display: block;
+    position: relative;
+    width: 25%;
+    left: 11.7rem;
+    bottom: 17.3rem;
   }
   .m-wrap.realisation .coverimage2middle {
     position: relative;
@@ -3279,7 +3274,7 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .coverrelatif-second3right img {
     width: 71%;
     margin-left: 2rem;
-    margin-bottom: 0.7rem;
+    margin-bottom: 2.7rem;
   }
   .m-wrap.realisation .coverrelatif-second3left img {
     max-width: 75%;
@@ -3801,7 +3796,6 @@ footer .l-footer .section__footer--right .btn--footer {
   grid-column: 1/7;
   grid: 4/6;
   margin-right: 2.5rem;
-  background: yellowgreen;
 }
 
 .item-27 {
@@ -4018,6 +4012,11 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-23 {
     grid-column: 5/7;
     grid-row: 1/3;
+  }
+
+  .item-4 {
+    margin-bottom: 0rem;
+    margin-top: 8.4rem;
   }
 
   .item-24 {
