--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -30,7 +30,7 @@
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 1.4rem;
-  //background: orange;
+
 }
 .item-21, .item-31 {
   grid-column: 1 / 7;
@@ -136,7 +136,7 @@
   grid-column: 1 / 7;
   grid: 4 / 6;
   margin-right: 2.5rem;
-  background: yellowgreen;
+
 }
 
 .item-27 {
@@ -350,6 +350,11 @@
       grid-column: 5 / 7;
       grid-row: 1 / 3;
     }
+    .item-4{
+      margin-bottom: 0rem;
+      margin-top: 8.4rem;
+    }
+
     .item-24{
       grid-row: 2/4;
       margin-top: 19.7rem;
