--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -94,6 +94,7 @@
   margin-top: 1.9rem;
   margin-bottom: 4.5rem;
   z-index: 4;
+
 }
 .item-24 {
   grid-column: 1 / 7;
@@ -145,12 +146,14 @@
     margin-top: 30.9rem;
     margin-bottom: 4.5rem;
   z-index: 4;
+  //background-color: yellow;
 }
 .item-37 {
   grid-column: 3/7;
   grid-row: 5/6;
   margin-top: 4.9rem;
   margin-bottom: 4.5rem;
+  //background-color: orangered;
 
 }
 
@@ -175,11 +178,15 @@
       grid-column: 3 / 7;
       grid-row: 5 / 6;
       margin-top: 34.9rem;
+    //  background-color: red;
     }
     .item-32 {
-
       padding-top: 1rem;
       margin-top: 9.1rem;
+    //  background-color: lightseagreen;
+    }
+    .item-4 {
+      padding-top: 3rem;
     }
   }
 
@@ -202,8 +209,6 @@
     .item-32 {
       grid-column: 5 / 7;
       grid-row: 2 / 3;
-
-      margin-top: 0.1rem;
 
     }
     .item-3{
@@ -237,7 +242,9 @@
       grid-row: 4/6;
       margin-top: -3.1rem;
       margin-bottom: 0.5rem;
+      padding-top: 4rem;
       z-index: 4;
+      //background-color: blueviolet;
     }
     .item-34{
       margin-top: -3.1rem;
@@ -310,6 +317,8 @@
       padding-bottom: 0.8rem;
       margin-bottom: 1rem;
       margin-top: 1.4rem;
+      padding-top: 6rem;
+     // background-color: rgb(226, 43, 150);
     }
   }
 
@@ -352,7 +361,7 @@
     }
     .item-4{
       margin-bottom: 0rem;
-      margin-top: 8.4rem;
+    margin-top: 8.4rem;
     }
 
     .item-24{
@@ -486,6 +495,7 @@
 
     .item-27{
       padding-left: 0.5rem;
+      padding-top: 2rem;
     }
   }
 
@@ -529,6 +539,7 @@
       grid-column: 3 / 6;
       margin-top: 15.5rem;
       margin-bottom: 4rem;
+      padding-right: 4rem;
     }
     .item-34{
       grid-column: 1/4;
