--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -89,8 +89,8 @@
   }
   .coverimage3middle {
     position: relative;
-    left: 0.4rem;
-    bottom: 18rem;
+    left: -1rem;
+    bottom: 13rem;
     width: 84%;
     padding-left: 5rem;
   }
@@ -119,9 +119,9 @@
     z-index:5;
   }
   .coverrelatif2 >img{
-    width: 190%;
-    margin-top: 2rem;
-    margin-left: -2rem;
+
+    margin-top: -1rem;
+    margin-left: 1rem;
   }
   .coverrelatif-second img {
     max-width: 30%;
@@ -147,7 +147,8 @@
       padding-left: 0.8rem;
     }
     .coverimage-ter img{
-
+      margin-left: 4rem;
+      margin-top: -3rem;
       width: 157%;
     }
     .coverimage2middle {
@@ -182,6 +183,9 @@
       width: 25%;
       left: 11.7rem;
       bottom: 17.3rem;
+    }
+    .coverimage-ter img {
+      margin-left: -1rem;
     }
 
     .coverimage2middle {
@@ -413,8 +417,8 @@
       margin-top: -7rem;
     }
     .coverrelatif-second img{
-      margin-left: 1rem;
-    margin-top: -9rem
+      margin-left: 2rem;
+      margin-top: -10rem;
     }
     .coverrelatif2 > img {
       margin-top: -2rem;
@@ -448,6 +452,7 @@
       top: -1.3rem;
     }
 
+
     .coverimage {
       position: absolute;
     }
@@ -466,7 +471,7 @@
       max-width: 68%;
     }
     .coverrelatif2 > img{
-      margin-top: -1rem;
+      margin-top: -2rem;
       margin-left: 0.4rem;
     }
 
@@ -481,10 +486,12 @@
      // border: 1px solid red;
     }
     .coverrelatif-second2right > img {
-      width: 96%;
-      margin-left: 1.2rem;
-      margin-top: -4.2rem;
+      width: 102%;
+      margin-left: 3.2rem;
+      margin-top: 1.8rem;
     }
+
+
 
     .coverrelatif-ter {
       position: absolute;
@@ -572,6 +579,7 @@
     .backimage-second2right > img {
       margin-top: 5rem;
       margin-left: 4.1rem;
+
     }
   .coverrelatif-second2right {
     left: 8.9rem;
@@ -581,8 +589,9 @@
     left: -2rem;
   }
   .coverrelatif-second2left img {
-    top: 8.1rem;
+    top: 1.1rem;
     left: 1.8rem;
+
   }
   .backimage-second > img {
     max-width: 59%;
@@ -590,7 +599,7 @@
     top: 3rem;
   }
   .coverrelatif-second2right > img {
-    width: 96%;
+    width: 127%;
     margin-left: 1.6rem;
     margin-top: -1.2rem;
   }
@@ -652,14 +661,14 @@
       left: 13.9rem;
     }
     .coverrelatif-second2right > img {
-      width: 96%;
+      width: 118%;
       margin-left: 1.4rem;
       margin-top: 0.8rem;
     }
     .coverrelatif2 > img {
       margin-top: -3rem;
       margin-left: 3rem;
-      width: 110%;
+      width: 103%;
     }
     .coverrelatif-second3left img {
       max-width: 70%;
@@ -667,14 +676,24 @@
     }
     .coverrelatif-second3right img {
       width: 71%;
-      margin-left: 2rem;
-      margin-bottom: 2.7rem;
+      margin-left: 3rem;
+      margin-bottom: 4.7rem;
     }
+    .coverrelatif-second2left img {
+    width: 75%;
+    margin-left: 4rem;
+    margin-bottom: 22.7rem;
+}
 
   }
 
   /* PC portable xlg 1360px */
   @media screen and (min-width: break-point(xlg)){
+    .coverrelatif-second3right img{
+      width: 75%;
+      margin-left: 4rem;
+      margin-bottom: 22.7rem;
+    }
     .title__primary2{
       font-size: 1.6rem;
     }
