--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -45,7 +45,9 @@ main{
 h1{
 
     font-size: 24px;
+    font-style: inherit;
     color: white;
+
 
     @media screen and (min-width: map-get($break-point, md)) {
 
@@ -60,7 +62,7 @@ a {
 
     text-decoration: none;
     font-size: 22px;
-    color: white;
+    color: white!important;
 
         &:hover{
             color: map-get($colors , primaryGreen );
@@ -73,7 +75,7 @@ a {
 
 
 p{
-    
+
 
 }
 
