--- a/sass/layout/_l-header.scss
+++ b/sass/layout/_l-header.scss
@@ -205,7 +205,7 @@
 
 
                 &.blue-contact{
-                    color: map-get($colors,primaryGreen);
+                    color: map-get($colors,primaryGreen)!important;
 
                 }
                 }
