--- a/sass/modules/_m-contact.scss
+++ b/sass/modules/_m-contact.scss
@@ -1,9 +1,13 @@
 /********************wrapper********************/
 .l-wrapper--contact{
+    
     /********************section contact********************/
     .l-banner-img{
-        
+        @media screen and (min-width: map-get($break-point, md)) {
+           height: 200%;
+        }
     }
+
     .header__map{
         display:block;
         border-top-left-radius: 25px;
@@ -41,58 +45,227 @@
         display: block;
         width: 100%;    
         position: absolute;
-        margin: 40rem auto auto 3rem;
+        margin: 10rem auto auto 3rem;
         color: map-get($colors ,main );
         padding-bottom: 2rem;
         z-index: 997;
         grid-column: 1/3;
 
         @media screen and (min-width: map-get($break-point, md)) {
-            margin:-5rem auto 1rem 5rem;
+            margin:0rem auto 1rem 5rem;
             width: 50%;
         }
         @media screen and (min-width: map-get($break-point, lg)) {
-            margin:15rem auto 1rem auto;
+            margin:0rem auto 1rem auto;
             width: 50%;
         }
 
         .title{
-            margin-top: 2rem;
+            
             
 
         }
 
         .detail{
-            display: block;
-            position: absolute;
-            text-align: left;
-            margin: 2rem auto auto 0;
-            width: 80%;
-            line-height: 2;
-            padding-bottom: 2rem;
+            
     
     
             @media screen and (min-width: map-get($break-point, md)) {
-                display: block;
-            
-                text-align: left;
-                margin: 10rem auto auto 0;
-                color: white;
-                padding-bottom: 2rem;
+                width: 80%;
             }
     
             @media screen and (min-width: map-get($break-point, lg)) {
-                margin: -8rem auto auto 10rem;
+                
             }
         }
     }
     .point__contact.l-point{
-        margin-left: 12rem;
-        margin-top: -7rem;
-        z-index: 997;
+        
+
+        z-index: 996;
 
         @media screen and (min-width: map-get($break-point, md)) {
+            margin-left: 32rem;
             margin-top: -17rem;
+    
+            z-index: 996;
         }
     }
+
+    .section__contact{
+       
+        width: 80%;
+        @media screen and (min-width: map-get($break-point, md)) {
+            margin-top: -80rem;
+            margin-left: 7rem;
+    
+            z-index: 996;
+        }
+
+    }
+    .infos{
+        margin-top: 13rem;
+        z-index: 996;
+        position: relative;
+        width: 150%;
+
+        li{
+            color:white;
+            padding-bottom: 1rem;
+            line-height: 2rem;
+            
+        }
+        img{
+            margin-right: 1rem;
+            
+        }
+    }
+
+    .formulaire {
+        width: 93%;
+        height: auto;
+        border-radius: 5px;
+        z-index: 996;
+        
+        margin-right: 0;
+        padding: 1rem 0rem 0rem 0rem;
+        margin: 2rem auto 4rem 1rem; 
+        position: absolute;
+
+        margin-bottom: 3rem;
+        display:none;
+
+        input[type=text], input[type=tel], input[type=email] {
+          display: inline-block;
+          border: o;
+          border-radius: 4px;
+          background-color: white;
+          font-size: 1rem;
+          color: black;
+          width: 100%;
+          height: 3rem;
+          box-sizing: border-box;
+          margin-bottom: 2rem;
+          text-align: left; 
+          padding:5px;
+        }
+        
+        input[placeholder=""] {
+          background-color: antiquewhite; 
+          
+        }
+        
+        textarea {
+          box-sizing: border-box;
+          width: 100%;
+          height: 200px;
+          margin-top: 8px;
+          margin-bottom: 40px;
+          padding: 12px;
+          border-radius: 8px;
+          resize: vertical, horizontal; 
+        }
+        #message-confirmation {
+          font-size: 1rem;
+          color: map-get($colors , link); 
+          margin-top: 2rem;
+          text-align: center;
+        }
+      
+    
+  
+  
+      
+  @media screen and (min-width: map-get($break-point, lg)) {
+    margin: 2rem auto 0 auto; 
+
+                
+      input[type=text], input[type=tel], input[type=email] {
+        display: inline-block;
+        
+        margin-top: -15rem;
+        background-color: white;
+        font-size: 1rem;
+        color: black;
+        width: 95.5%;
+        height: 2rem;
+        box-sizing: border-box;
+        margin-bottom: 0.5rem;
+        text-align: left; 
+        padding:5px;
+      }
+      
+      input[placeholder=""] {
+        background-color: antiquewhite; 
+        
+      }
+      
+      textarea {
+        box-sizing: border-box;
+        width: 65%;
+        height: 150px;
+        padding: 8px;
+        resize: vertical, horizontal; 
+        margin: -0.3rem auto auto -0.5rem;
+      }
+
+      #message-confirmation {
+        font-size: 1rem;
+        color: map-get($colors , primaryGreen); 
+        margin-top: 2rem;
+        text-align: center;
+      }
+      }
+        
+        
+
+      @media screen and (min-width: map-get($break-point, xlg)) {
+        margin: 2rem auto 0 1rem; 
+
+              
+    input[type=text], input[type=tel], input[type=email] {
+      display: inline-block;
+      
+      margin-top: -15rem;
+      background-color: white;
+      font-size: 1rem;
+      color: black;
+      width: 90.5%;
+      height: 2rem;
+      box-sizing: border-box;
+      margin-bottom: 0.5rem;
+      text-align: left; 
+      padding:5px;
+    }
+    
+    input[placeholder=""] {
+      background-color: antiquewhite; 
+      
+    }
+    
+    textarea {
+      box-sizing: border-box;
+      width: 78%;
+      height: 150px;
+      padding: 8px;
+      resize: vertical, horizontal; 
+      margin: -0.3rem auto auto -2rem;
+      border-bottom-right-radius:35px;
+    }
+
+    #message-confirmation {
+      font-size: 1rem;
+      color: map-get($colors , primaryGreen); 
+      margin-top: -5rem;
+      text-align: center;
+    }
+    }
+      
+      
+
+
+  
+  }
+
+    
    }
